[gd_scene load_steps=23 format=3 uid="uid://cfy243i0kd1cb"]

[ext_resource type="Script" path="res://room.gd" id="1_px8ol"]
[ext_resource type="Texture2D" uid="uid://dtxuwn72v6iui" path="res://art/main room.PNG" id="2_husx8"]
[ext_resource type="Texture2D" uid="uid://is5n476fgekw" path="res://art/arrow.PNG" id="3_bma02"]
[ext_resource type="Texture2D" uid="uid://b0ntdu2glqfxn" path="res://art/left wall.PNG" id="4_of1yb"]
[ext_resource type="Texture2D" uid="uid://o3xsmuyt5k5g" path="res://art/return.PNG" id="5_xourl"]
[ext_resource type="Texture2D" uid="uid://b6h25a8ai2hog" path="res://art/right Wall.PNG" id="6_nnuvc"]
[ext_resource type="Texture2D" uid="uid://drofonil8t46s" path="res://art/painting 1.PNG" id="6_x17j6"]
[ext_resource type="Texture2D" uid="uid://cncut3a30jwir" path="res://art/front wall.PNG" id="7_nxmvr"]
[ext_resource type="Texture2D" uid="uid://cn007kodgbnx" path="res://art/painting 2.PNG" id="8_6qmun"]
[ext_resource type="Texture2D" uid="uid://e3vlr8l8casf" path="res://art/painting 3.PNG" id="10_0cw3k"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ddivy"]
radius = 28.1603

[sub_resource type="CircleShape2D" id="CircleShape2D_s6bbm"]
radius = 27.4591

[sub_resource type="CircleShape2D" id="CircleShape2D_5fiil"]
radius = 27.1662

[sub_resource type="CircleShape2D" id="CircleShape2D_lu6b0"]
radius = 33.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kii1n"]
size = Vector2(968.779, 556.395)

[sub_resource type="CircleShape2D" id="CircleShape2D_uxcqm"]
radius = 35.1381

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rvwke"]
size = Vector2(993.39, 560.751)

[sub_resource type="CircleShape2D" id="CircleShape2D_w43hp"]
radius = 36.7886

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ka71n"]
size = Vector2(1008.99, 601.408)

[sub_resource type="CircleShape2D" id="CircleShape2D_6cqyu"]
radius = 28.357

[sub_resource type="CircleShape2D" id="CircleShape2D_dt2k6"]
radius = 29.6795

[sub_resource type="CircleShape2D" id="CircleShape2D_18k77"]
radius = 29.872

[node name="Room" type="Node2D"]
script = ExtResource("1_px8ol")

[node name="Main Background" type="TextureRect" parent="."]
offset_top = 1.0
offset_right = 1148.0
offset_bottom = 651.0
texture = ExtResource("2_husx8")
expand_mode = 1

[node name="Left Arrow" type="Sprite2D" parent="."]
position = Vector2(71, 323)
texture = ExtResource("3_bma02")

[node name="Left Arrow Area" type="Area2D" parent="Left Arrow"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left Arrow/Left Arrow Area"]
position = Vector2(-5, 1)
shape = SubResource("CircleShape2D_ddivy")

[node name="Right Arrow" type="Sprite2D" parent="."]
position = Vector2(1076, 323)
texture = ExtResource("3_bma02")
flip_h = true

[node name="Right Arrow Area" type="Area2D" parent="Right Arrow"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right Arrow/Right Arrow Area"]
shape = SubResource("CircleShape2D_s6bbm")

[node name="Front Arrow" type="Sprite2D" parent="."]
position = Vector2(550, 62)
rotation = 1.55992
texture = ExtResource("3_bma02")

[node name="Front Arrow Area" type="Area2D" parent="Front Arrow"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Front Arrow/Front Arrow Area"]
shape = SubResource("CircleShape2D_5fiil")

[node name="Left Wall" type="Sprite2D" parent="."]
visible = false
scale = Vector2(1.12402, 1.08333)
texture = ExtResource("4_of1yb")
centered = false

[node name="Left Wall Return" type="Sprite2D" parent="Left Wall"]
position = Vector2(983.076, 42.4615)
scale = Vector2(0.889661, 0.923077)
texture = ExtResource("5_xourl")

[node name="Left Return Area" type="Area2D" parent="Left Wall/Left Wall Return"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left Wall/Left Wall Return/Left Return Area"]
shape = SubResource("CircleShape2D_lu6b0")

[node name="Left Painting" type="Sprite2D" parent="Left Wall"]
position = Vector2(504.438, 300)
scale = Vector2(0.459166, 0.529231)
texture = ExtResource("6_x17j6")

[node name="Left Painting Area" type="Area2D" parent="Left Wall/Left Painting"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left Wall/Left Painting/Left Painting Area"]
position = Vector2(0, -7.84882)
shape = SubResource("RectangleShape2D_kii1n")

[node name="Right Wall" type="Sprite2D" parent="."]
visible = false
scale = Vector2(1.12012, 1.085)
texture = ExtResource("6_nnuvc")
centered = false

[node name="Right Wall Return" type="Sprite2D" parent="Right Wall"]
position = Vector2(975.791, 41.4747)
texture = ExtResource("5_xourl")

[node name="Right Return Area" type="Area2D" parent="Right Wall/Right Wall Return"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right Wall/Right Wall Return/Right Return Area"]
shape = SubResource("CircleShape2D_uxcqm")

[node name="Right Painting" type="Sprite2D" parent="Right Wall"]
position = Vector2(218.727, 96.7742)
scale = Vector2(0.552746, 0.623656)
texture = ExtResource("8_6qmun")
centered = false

[node name="Right Painting Area" type="Area2D" parent="Right Wall/Right Painting"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right Wall/Right Painting/Right Painting Area"]
position = Vector2(505.539, 298.522)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_rvwke")

[node name="Front Wall" type="Sprite2D" parent="."]
visible = false
scale = Vector2(1.12012, 1.085)
texture = ExtResource("7_nxmvr")
centered = false

[node name="Front Wall Return" type="Sprite2D" parent="Front Wall"]
position = Vector2(977.495, 39.6313)
texture = ExtResource("5_xourl")

[node name="Front Return Area" type="Area2D" parent="Front Wall/Front Wall Return"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Front Wall/Front Wall Return/Front Return Area"]
shape = SubResource("CircleShape2D_w43hp")

[node name="Front Painting" type="Sprite2D" parent="Front Wall"]
position = Vector2(211.585, 96.7742)
scale = Vector2(0.571055, 0.643625)
texture = ExtResource("10_0cw3k")
centered = false

[node name="Front Painting Area" type="Area2D" parent="Front Wall/Front Painting"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Front Wall/Front Painting/Front Painting Area"]
position = Vector2(508.092, 297.852)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_ka71n")

[node name="In Left Painting" type="Sprite2D" parent="."]
visible = false
scale = Vector2(1.13086, 1.085)
texture = ExtResource("6_x17j6")
centered = false

[node name="Left Painting Return" type="Sprite2D" parent="In Left Painting"]
position = Vector2(961.216, 43.318)
texture = ExtResource("5_xourl")

[node name="Left Painting Return Area" type="Area2D" parent="In Left Painting/Left Painting Return"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="In Left Painting/Left Painting Return/Left Painting Return Area"]
shape = SubResource("CircleShape2D_6cqyu")

[node name="In Right Painting" type="Sprite2D" parent="."]
visible = false
scale = Vector2(1.125, 1.08833)
texture = ExtResource("8_6qmun")
centered = false

[node name="Right Painting Return" type="Sprite2D" parent="In Right Painting"]
position = Vector2(968, 41.3476)
texture = ExtResource("5_xourl")

[node name="Right Painting Return Area" type="Area2D" parent="In Right Painting/Right Painting Return"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="In Right Painting/Right Painting Return/Right Painting Return Area"]
shape = SubResource("CircleShape2D_dt2k6")

[node name="In Front Painting" type="Sprite2D" parent="."]
visible = false
scale = Vector2(1.12402, 1.08833)
texture = ExtResource("10_0cw3k")
centered = false

[node name="Front Painting Return" type="Sprite2D" parent="In Front Painting"]
position = Vector2(965.282, 45.9418)
texture = ExtResource("5_xourl")

[node name="Front Painting Return Area" type="Area2D" parent="In Front Painting/Front Painting Return"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="In Front Painting/Front Painting Return/Front Painting Return Area"]
shape = SubResource("CircleShape2D_18k77")

[connection signal="input_event" from="Left Arrow/Left Arrow Area" to="." method="_on_left_arrow_area_input_event"]
[connection signal="mouse_entered" from="Left Arrow/Left Arrow Area" to="." method="change_cursor"]
[connection signal="mouse_exited" from="Left Arrow/Left Arrow Area" to="." method="change_cursor_back"]
[connection signal="input_event" from="Right Arrow/Right Arrow Area" to="." method="_on_right_arrow_area_input_event"]
[connection signal="mouse_entered" from="Right Arrow/Right Arrow Area" to="." method="change_cursor"]
[connection signal="mouse_exited" from="Right Arrow/Right Arrow Area" to="." method="change_cursor_back"]
[connection signal="input_event" from="Front Arrow/Front Arrow Area" to="." method="_on_front_arrow_area_input_event"]
[connection signal="mouse_entered" from="Front Arrow/Front Arrow Area" to="." method="change_cursor"]
[connection signal="mouse_exited" from="Front Arrow/Front Arrow Area" to="." method="change_cursor_back"]
[connection signal="input_event" from="Left Wall/Left Wall Return/Left Return Area" to="." method="_on_left_return_area_input_event"]
[connection signal="mouse_entered" from="Left Wall/Left Wall Return/Left Return Area" to="." method="change_cursor_in_selection"]
[connection signal="mouse_exited" from="Left Wall/Left Wall Return/Left Return Area" to="." method="change_cursor_back_in_selection"]
[connection signal="input_event" from="Left Wall/Left Painting/Left Painting Area" to="." method="_on_left_painting_area_input_event"]
[connection signal="mouse_entered" from="Left Wall/Left Painting/Left Painting Area" to="." method="change_cursor_in_selection"]
[connection signal="mouse_exited" from="Left Wall/Left Painting/Left Painting Area" to="." method="change_cursor_back_in_selection"]
[connection signal="input_event" from="Right Wall/Right Wall Return/Right Return Area" to="." method="_on_right_return_area_input_event"]
[connection signal="mouse_entered" from="Right Wall/Right Wall Return/Right Return Area" to="." method="change_cursor_in_selection"]
[connection signal="mouse_exited" from="Right Wall/Right Wall Return/Right Return Area" to="." method="change_cursor_back_in_selection"]
[connection signal="input_event" from="Right Wall/Right Painting/Right Painting Area" to="." method="_on_right_painting_area_input_event"]
[connection signal="mouse_entered" from="Right Wall/Right Painting/Right Painting Area" to="." method="change_cursor_in_selection"]
[connection signal="mouse_exited" from="Right Wall/Right Painting/Right Painting Area" to="." method="change_cursor_back_in_selection"]
[connection signal="input_event" from="Front Wall/Front Wall Return/Front Return Area" to="." method="_on_front_return_area_input_event"]
[connection signal="mouse_entered" from="Front Wall/Front Wall Return/Front Return Area" to="." method="change_cursor_in_selection"]
[connection signal="mouse_exited" from="Front Wall/Front Wall Return/Front Return Area" to="." method="change_cursor_back_in_selection"]
[connection signal="input_event" from="Front Wall/Front Painting/Front Painting Area" to="." method="_on_front_painting_area_input_event"]
[connection signal="mouse_entered" from="Front Wall/Front Painting/Front Painting Area" to="." method="change_cursor_in_selection"]
[connection signal="mouse_exited" from="Front Wall/Front Painting/Front Painting Area" to="." method="change_cursor_back_in_selection"]
[connection signal="input_event" from="In Left Painting/Left Painting Return/Left Painting Return Area" to="." method="_on_left_painting_return_area_input_event"]
[connection signal="mouse_entered" from="In Left Painting/Left Painting Return/Left Painting Return Area" to="." method="change_cursor_in_painting"]
[connection signal="mouse_exited" from="In Left Painting/Left Painting Return/Left Painting Return Area" to="." method="change_cursor_back_in_painting"]
[connection signal="input_event" from="In Right Painting/Right Painting Return/Right Painting Return Area" to="." method="_on_right_painting_return_area_input_event"]
[connection signal="mouse_entered" from="In Right Painting/Right Painting Return/Right Painting Return Area" to="." method="change_cursor_in_painting"]
[connection signal="mouse_exited" from="In Right Painting/Right Painting Return/Right Painting Return Area" to="." method="change_cursor_back_in_painting"]
[connection signal="input_event" from="In Front Painting/Front Painting Return/Front Painting Return Area" to="." method="_on_front_painting_return_area_input_event"]
[connection signal="mouse_entered" from="In Front Painting/Front Painting Return/Front Painting Return Area" to="." method="change_cursor_in_painting"]
[connection signal="mouse_exited" from="In Front Painting/Front Painting Return/Front Painting Return Area" to="." method="change_cursor_back_in_painting"]
